<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/showDriverId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_grid_3x3_24"
            android:hint="@string/driver_id"

            android:textColor="@color/purple_700" />
        <TextView
            android:id="@+id/showDriverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/driver_name"
            android:textColor="@color/purple_700" />
        <TextView
            android:id="@+id/showDriverPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:hint="@string/driver_phone"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/showTruckId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_directions_car_24"
            android:hint="@string/truck_id_hint"

            android:textColor="@color/purple_700" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>