<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="احصائياتي"
                    android:textDirection="rtl"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>


            <TableLayout
                android:id="@+id/tableLayout"
                style="@style/Widget.Design.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/distance_label"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:gravity="right"
                        android:padding="2dp"
                        android:text="@string/minute_label"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </TableRow>

            </TableLayout>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_year_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:id="@+id/tableLayout2"
                style="@style/Widget.Design.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/num_trips"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:gravity="right"
                        android:padding="2dp"
                        android:text="@string/monthLabel"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </TableRow>

            </TableLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>